<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameZone 游戏地带</string>
    <string name="app_sub_name">正版认证</string>
    <string name="new_list_txt">新上榜</string>
    <string name="hot_game_txt">热门推荐</string>
    <string name="my_center_txt">个人中心</string>
    <string name="login_btn_txt">登录</string>
    <string name="for_free_txt">限时免费</string>
    <string name="app_download_managr_txt">下载管理</string>
    <string name="app_update_txt">应用更新</string>
    <string name="accout_setting_txt">设置</string>
    <string name="my_accout_txt">我的账户</string>
    <string name="account_balance_txt">账户余额</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>    
    <string name="my_gallery">my gallery</string>
    <string name="my_gallery_text">my gallery_text</string>

</resources>
