<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/login_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_style"
        android:text="@string/login_btn_txt"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/app_logo"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/app_logo"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/app_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_sub_name"
            android:textColor="#666"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>