<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/my_center_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/download_manager"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_style"
            android:button="@null"
            android:drawableLeft="@drawable/icon_download"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/app_download_managr_txt"
            android:textColor="#222"
            android:textSize="12sp" />
        <View android:layout_width="1dp"
            android:layout_height="34dp"
            android:background="#d3d1d1"/>

        <RadioButton
            android:id="@+id/app_update"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_style"
            android:button="@null"
            android:drawableLeft="@drawable/icon_update"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/app_update_txt"
            android:textColor="#222"
            android:textSize="12sp" />
         <View android:layout_width="1dp"
            android:layout_height="34dp"
            android:background="#d3d1d1"/>

        <RadioButton
            android:id="@+id/my_account_setting"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_style"
            android:button="@null"
            android:drawableLeft="@drawable/icon_setting"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/accout_setting_txt"
            android:textColor="#222"
            android:textSize="12sp" />
    </RadioGroup>

    <ScrollView
        android:id="@+id/my_center_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/my_center_group" >

        <LinearLayout
            android:id="@+id/my_center_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</RelativeLayout>